--- a/templates/plist.html
+++ b/templates/plist.html
@@ -1,4 +1,5 @@
 <title>Priority List</title>
+<div id="p_list">
 <h1>Priority List</h1>
 {% if pl %}
     <ol>
@@ -8,5 +9,7 @@
     </ol>
     
 {% else %}
-    <p>No list made.</p>
+    <p>No list made/plist/.</p>
 {% endif %}
+</div>
+<b><a href="/aniface/">Return to AniFace Home</a></b>
