Before big changes, I am commiting what works.

--- a/templates/anindex.html
+++ b/templates/anindex.html
@@ -1,4 +1,9 @@
+<head>
 <title>AniFace Home</title>
+<style type="text/css">
+A {text-decoration: none; font-weight: bold;}
+</style>
+</head>
 <div id="ani_list">
 <h3>Anime List</h3>
 {% if anime_list %}
@@ -12,4 +17,4 @@
     <p>No anime to list</p>
 {% endif %}
 </div>
-<b><a href="/aniface/plist">Priority List</a></b>
+<a href="/aniface/plist">Priority List</a>
