Adding a style to plist.html

--- a/templates/plist.html
+++ b/templates/plist.html
@@ -1,4 +1,9 @@
+<head>
 <title>Priority List</title>
+<style type="text/css">
+    A {text-decoration: none; font-weight: bold;}
+</style>
+<head>
 <div id="p_list">
 <h1>Priority List</h1>
 {% if pl %}
