--- a/templates/anime.html
+++ b/templates/anime.html
@@ -1,13 +1,13 @@
 <html>
 <head>
-<!-- <link rel="stylesheet" type="text/css" href="/static/mystyles.css" /> -->
+<link rel="stylesheet" type="text/css" href="/aniface/af_media/mystyles.css" />
 <title>Viewing Page - {{ anime.a_name }}</title>
 </head>
 <body>
 <h1>{{ anime.a_name }}</h1>
 <h3>Synopsis</h3>
-<b><a href="http://www.anime-planet.com/anime/{{ anime.ap_slug }}">AP Link</a></b>
-<div>[Anime Synopsis goes here]</div>
+<b><a class="APStuff" href="http://www.anime-planet.com/anime/{{ anime.ap_slug }}">AP Link</a></b>
+<div class="APStuff">[Anime Synopsis goes here]</div>
 
 <div>
 <h2>File location - {{ anime.location }}</h2>
