Bringing everyone in line.

--- a/templates/anindex.html
+++ b/templates/anindex.html
@@ -1,8 +1,6 @@
 <head>
 <title>AniFace Home</title>
-<style type="text/css">
-A {text-decoration: none; font-weight: bold;}
-</style>
+<link rel="stylesheet" type="text/css" href="/aniface/af_media/mystyles.css" />
 </head>
 <div id="ani_list">
 <h3>Anime List</h3>
