--- a/templates/plist.html
+++ b/templates/plist.html
@@ -7,7 +7,10 @@
 {% if pl %}
     <ol>
     {% for entry in pl %}
-        <li>{{ entry.anime.a_name }} <a href="/aniface/move/{{ entry.anime.ap_slug }}/?dr=1">Up</a>&nbsp;<a href="/aniface/move/{{ entry.anime.ap_slug }}/?dr=2">Down</a></li>
+        <li>{{ entry.anime.a_name }}
+        <a class="List" href="/aniface/move/{{ entry.anime.ap_slug }}/?dr=1">Up</a>
+        <a class="List" href="/aniface/move/{{ entry.anime.ap_slug }}/?dr=2">Down</a>&#x0009;
+        <a class="List" href="/aniface/remove/?loc={{ forloop.counter }}">Remove</a></li>
     {% endfor %}
     </ol>
     
