--- a/templates/plist.html
+++ b/templates/plist.html
@@ -1,10 +1,9 @@
-<head>
-<title>Priority List</title>
-<link rel="stylesheet" type="text/css" href="/aniface/af_media/mystyles.css" />
-<head>
+{% extends 'base.html' %}
+{% block title %}Priority List{% endblock %}
+
+{% block body %}
 <div id="p_list">
 <h1>Priority List for {{ u.username }}</h1>
-<a href="/aniface/logout/">log out</a>
 {% if pl %}
     <ol>
     {% for entry in pl %}
@@ -33,3 +32,4 @@
 </form>
 </div>
 <b><a href="/aniface/">Return to AniFace Home</a></b>
+{% endblock %}
