--- a/templates/mystyles.css
+++ b/templates/mystyles.css
@@ -5,12 +5,13 @@ text-decoration: none;
 
 body
 {
-font-family: Raavi;
+font-family: Raavi, sans-serif;
 }
 
 .APStuff {font-style: italic;}
 
 ol, ul {font-weight: bold; }
+li {list-style-type: katakana;}
 li.PList {list-style: none;}
 input.PListText {width: 40px;}
 
@@ -18,4 +19,4 @@ A.List:link, A.List:visited {color: blue}
 A.List:hover {color: red}
 A.List:active {color: purple}
 
-
+TR.Watched {background-color: #66CCCC}
