--- a/templates/mystyles.css
+++ b/templates/mystyles.css
@@ -20,3 +20,11 @@ A.List:hover {color: red}
 A.List:active {color: purple}
 
 TR.Watched {background-color: #66CCCC}
+
+P.Footer
+    {
+    font-weight: bold;
+    font-family: monospace;
+    font-size: large;
+    text-align: center;
+    }
