--- a/templates/anime.html
+++ b/templates/anime.html
@@ -3,11 +3,13 @@
 
 {% block body %}
 <h1>{{ anime.a_name }}</h1>
+{% if anime.is_anime %}
 <div class="APStuff">
 <h3>Synopsis</h3>
 <b><a href="http://www.anime-planet.com/anime/{{ anime.ap_slug }}">AP Link</a></b>
 <p id="synop">[Anime Synopsis goes here]</p>
 </div>
+{% endif %}
 
 <h2>File location - {{ anime.location }}</h2>
 
