--- a/templates/anindex.html
+++ b/templates/anindex.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Anime List{% endblock %}
 
+{% block t_line %} AniFace Home {% endblock %}
 {% block body %}
 <div id="ani_list">
 <h3>Anime List</h3>
